--- a/unimini/build.gradle
+++ b/unimini/build.gradle
@@ -66,3 +66,6 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.6.1'
     api 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 }
+
+
+apply from: '../publish.gradle'
